--- a/spot-core-support/pom.xml
+++ b/spot-core-support/pom.xml
@@ -33,6 +33,11 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-aop</artifactId>
+			<version>${spring.boot.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 			<version>${spring.boot.version}</version>
@@ -43,7 +48,7 @@
 			<scope>test</scope>
 			<version>${spring.boot.version}</version>
 		</dependency>
-		
+
 
 		<dependency>
 			<groupId>javax.servlet</groupId>
@@ -57,11 +62,11 @@
 		</dependency>
 
 		<!-- aspectj -->
-		<dependency>
-			<groupId>org.aspectj</groupId>
-			<artifactId>aspectjtools</artifactId>
-			<version>1.9.0.BETA-5</version>
-		</dependency>
+		<!-- <dependency> -->
+		<!-- <groupId>org.aspectj</groupId> -->
+		<!-- <artifactId>aspectjtools</artifactId> -->
+		<!-- <version>1.9.0.BETA-5</version> -->
+		<!-- </dependency> -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-aspects</artifactId>
