--- a/spot-core-maven-plugins/pom.xml
+++ b/spot-core-maven-plugins/pom.xml
@@ -96,6 +96,12 @@
 			<version>3.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.apache.velocity</groupId>
+			<artifactId>velocity-engine-core</artifactId>
+			<version>2.0</version>
+		</dependency>
+
 		<!-- logging -->
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
