implemented property, getter and setter generation

--- a/spot-core-maven-plugins/pom.xml
+++ b/spot-core-maven-plugins/pom.xml
@@ -79,11 +79,10 @@
 		<!-- </dependency> -->
 
 		<dependency>
-			<groupId>com.google.googlejavaformat</groupId>
-			<artifactId>google-java-format</artifactId>
-			<version>1.4</version>
+			<groupId>com.github.rotty3000</groupId>
+			<artifactId>jalopy</artifactId>
+			<version>3000.0.0</version>
 		</dependency>
-
 
 		<dependency>
 			<groupId>org.apache.commons</groupId>
