--- a/spot-core/src/main/resources/core.properties
+++ b/spot-core/src/main/resources/core.properties
@@ -4,7 +4,29 @@ i18n.default.locale=en_EN
 
 service.typesystem.rest.port=19000
 service.persistence.mapdb.filepath=/var/tmp/spot-core.mapdb
-service.persistence.hsql.filepath=/var/tmp/spot-core.db
+
+#hibernate
+service.persistence.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+service.persistence.hibernate.show_sql=true
+service.persistence.hibernate.format_sql=true
+service.persistence.hibernate.hbm2ddl.auto=create
+service.persistence.hibernate.enable_lazy_load_no_trans=true
+service.persistence.hibernate.dialect.storage_engine=myisam
+
+#JDBC configuration, used by JPA and JDO persistence
+#HSQL
+#database.jdbc.url=jdbc:hsqldb:file:/var/tmp/spot-core.db
+#database.jdbc.username=sa
+#database.jdbc.password=
+#service.persistence.hibernate.dialect=org.hibernate.dialect.HSQLDialect
+
+
+#MYSQL
+database.jdbc.driverClassName=com.mysql.jdbc.Driver
+database.jdbc.url=jdbc:mysql://localhost/spot
+database.jdbc.username=root
+database.jdbc.password=
+
 
 init.default.admin.username=admin
 # the password is MD5 hashed, you can use any hashing method here, but make sure that you configure/implement the correct PasswordEncryptionStrategy 
