fixed hibernate database transactions problem

--- a/spot-core/src/main/resources/core.properties
+++ b/spot-core/src/main/resources/core.properties
@@ -6,12 +6,14 @@ service.typesystem.rest.port=19000
 service.persistence.mapdb.filepath=/var/tmp/spot-core.mapdb
 
 #hibernate
-service.persistence.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+# WARNING: never use MyISAM tables as then transactions don't work
+service.persistence.hibernate.dialect.storage_engine=innodb
+service.persistence.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+# END WARNING
 service.persistence.hibernate.show_sql=true
 service.persistence.hibernate.format_sql=true
 service.persistence.hibernate.hbm2ddl.auto=create
 service.persistence.hibernate.enable_lazy_load_no_trans=true
-service.persistence.hibernate.dialect.storage_engine=myisam
 
 #JDBC configuration, used by JPA and JDO persistence
 #HSQL
