fixed maven integration test

--- a/spot-core/src/main/resources/core.properties
+++ b/spot-core/src/main/resources/core.properties
@@ -25,7 +25,7 @@ service.persistence.hibernate.enable_lazy_load_no_trans=true
 
 #MYSQL
 database.jdbc.driverClassName=com.mysql.jdbc.Driver
-database.jdbc.url=jdbc:mysql://localhost/spot
+database.jdbc.url=jdbc:mysql://localhost/spot?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 database.jdbc.username=root
 database.jdbc.password=
 
