--- a/pom.xml
+++ b/pom.xml
@@ -28,11 +28,11 @@
 		<java.version>1.8</java.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<log4j.version>2.8.2</log4j.version>
+		<log4j.version>2.9.1</log4j.version>
 		<junit.version>4.12</junit.version>
-		<spring.boot.version>2.0.0.M4</spring.boot.version>
-		<spring.version>5.0.0.RC2</spring.version>
-		<aspectj.version>1.9.0.BETA-5</aspectj.version>
+		<spring.boot.version>2.0.0.M5</spring.boot.version>
+		<spring.version>5.0.0.RELEASE</spring.version>
+		<aspectj.version>1.9.0.BETA-6</aspectj.version>
 
 		<!-- nexus repositry -->
 		<nexus.snapshot.host>http://5.249.148.46:8081/repository/spot-snapshot/</nexus.snapshot.host>
@@ -197,7 +197,7 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>findbugs-maven-plugin</artifactId>
-				<version>3.0.4</version>
+				<version>3.0.5</version>
 				<configuration>
 					<effort>Max</effort>
 					<!-- Enables analysis which takes more memory but finds more bugs. If 
@@ -257,7 +257,7 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
-					<version>3.6.2</version>
+					<version>3.7.0</version>
 					<configuration>
 						<source>${java.version}</source>
 						<target>${java.version}</target>
@@ -272,7 +272,7 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>findbugs-maven-plugin</artifactId>
-				<version>3.0.4</version>
+				<version>3.0.5</version>
 				<configuration>
 					<skip>true</skip>
 					<!-- Enables analysis which takes more memory but finds more bugs. If 
@@ -290,7 +290,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jxr-plugin</artifactId>
-				<version>2.3</version>
+				<version>2.5</version>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -350,7 +350,7 @@
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
-			<version>3.4</version>
+			<version>3.6</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
