fixed more maven problems

--- a/spot-core/src/main/resources/core.properties
+++ b/spot-core/src/main/resources/core.properties
@@ -12,7 +12,7 @@ service.persistence.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 # END WARNING
 service.persistence.hibernate.show_sql=true
 service.persistence.hibernate.format_sql=true
-service.persistence.hibernate.hbm2ddl.auto=create
+service.persistence.hibernate.hbm2ddl.auto=update
 service.persistence.hibernate.enable_lazy_load_no_trans=true
 
 #JDBC configuration, used by JPA and JDO persistence
