--- a/spot-core/pom.xml
+++ b/spot-core/pom.xml
@@ -125,7 +125,7 @@
 			<artifactId>kotlin-stdlib</artifactId>
 			<version>1.1.51</version>
 		</dependency>
-		<!--  -->
+		<!-- -->
 
 
 		<dependency>
@@ -248,6 +248,13 @@
 			<groupId>com.sparkjava</groupId>
 			<artifactId>spark-core</artifactId>
 			<version>2.6.0</version>
+		</dependency>
+
+		<!-- dynamic load time weaving support-->
+		<dependency>
+			<groupId>de.invesdwin</groupId>
+			<artifactId>invesdwin-instrument</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 </project>
