--- a/spot-core-maven-plugins/pom.xml
+++ b/spot-core-maven-plugins/pom.xml
@@ -20,7 +20,8 @@
 				<configuration>
 					<source>${java.version}</source>
 					<target>${java.version}</target>
-					<skipErrorNoDescriptorsFound>true</skipErrorNoDescriptorsFound>
+					<goalPrefix>plugin</goalPrefix>
+					<skipErrorNoDescriptorsFound>false</skipErrorNoDescriptorsFound>
 				</configuration>
 			</plugin>
 		</plugins>
@@ -82,10 +83,10 @@
 		</dependency>
 
 		<!-- logging -->
-<!-- 		<dependency> -->
-<!-- 			<groupId>org.apache.logging.log4j</groupId> -->
-<!-- 			<artifactId>log4j-1.2-api</artifactId> -->
-<!-- 			<version>2.8.2</version> -->
-<!-- 		</dependency> -->
+		<!-- <dependency> -->
+		<!-- <groupId>org.apache.logging.log4j</groupId> -->
+		<!-- <artifactId>log4j-1.2-api</artifactId> -->
+		<!-- <version>2.8.2</version> -->
+		<!-- </dependency> -->
 	</dependencies>
 </project>
