refactored generated item class formatter

--- a/spot-commerce-base/pom.xml
+++ b/spot-commerce-base/pom.xml
@@ -28,6 +28,11 @@
 					</execution>
 				</executions>
 			</plugin>
+			
+			<plugin>
+				<groupId>net.revelc.code.formatter</groupId>
+				<artifactId>formatter-maven-plugin</artifactId>
+			</plugin>
 
 		</plugins>
 	</build>
