--- a/spot-core/pom.xml
+++ b/spot-core/pom.xml
@@ -68,6 +68,11 @@
 			<!-- </plugin> -->
 
 			<plugin>
+				<groupId>net.revelc.code.formatter</groupId>
+				<artifactId>formatter-maven-plugin</artifactId>
+			</plugin>
+
+			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.20.1</version>
