--- a/spot-core-support/pom.xml
+++ b/spot-core-support/pom.xml
@@ -21,10 +21,16 @@
 	</build>
 
 	<dependencies>
+		<!-- <dependency> -->
+		<!-- <groupId>com.fatboyindustrial.gson-jodatime-serialisers</groupId> -->
+		<!-- <artifactId>gson-jodatime-serialisers</artifactId> -->
+		<!-- <version>1.6.0</version> -->
+		<!-- </dependency> -->
+
 		<dependency>
-			<groupId>com.fatboyindustrial.gson-jodatime-serialisers</groupId>
-			<artifactId>gson-jodatime-serialisers</artifactId>
-			<version>1.6.0</version>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.0</version>
 		</dependency>
 
 		<!-- spring -->
